@@ -7,7 +7,6 @@
 package com.anji.captcha.service.impl;
 
 import com.alibaba.fastjson.JSONObject;
-
 import com.anji.captcha.model.common.RepCodeEnum;
 import com.anji.captcha.model.common.ResponseModel;
 import com.anji.captcha.model.vo.CaptchaVO;
@@ -20,12 +19,12 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
-import sun.misc.BASE64Encoder;
 
 import javax.imageio.ImageIO;
 import java.awt.*;
 import java.awt.image.BufferedImage;
 import java.io.ByteArrayOutputStream;
+import java.util.Base64;
 import java.util.Random;
 
 /**
@@ -154,7 +153,6 @@ public class BlockPuzzleCaptchaServiceImpl extends AbstractCaptchaservice {
             graphics.drawImage(newJigsawImage, 0, 0, null);
             graphics.dispose();
 
-
             ByteArrayOutputStream os = new ByteArrayOutputStream();//新建流。
             ImageIO.write(newJigsawImage, IMAGE_TYPE_PNG, os);//利用ImageIO类提供的write方法，将bi以png图片的数据模式写入流。
             byte[] jigsawImages = os.toByteArray();
@@ -162,12 +160,11 @@ public class BlockPuzzleCaptchaServiceImpl extends AbstractCaptchaservice {
             ByteArrayOutputStream oriImagesOs = new ByteArrayOutputStream();//新建流。
             ImageIO.write(originalImage, IMAGE_TYPE_PNG, oriImagesOs);//利用ImageIO类提供的write方法，将bi以jpg图片的数据模式写入流。
             byte[] oriCopyImages = oriImagesOs.toByteArray();
-
-            BASE64Encoder encoder = new BASE64Encoder();
-            dataVO.setOriginalImageBase64(encoder.encode(oriCopyImages).replaceAll("\r|\n", ""));
+            Base64.Encoder encoder = Base64.getEncoder();
+            dataVO.setOriginalImageBase64(encoder.encodeToString(oriCopyImages).replaceAll("\r|\n", ""));
             //point信息不传到前端，只做后端check校验
 //            dataVO.setPoint(point);
-            dataVO.setJigsawImageBase64(encoder.encode(jigsawImages).replaceAll("\r|\n", ""));
+            dataVO.setJigsawImageBase64(encoder.encodeToString(jigsawImages).replaceAll("\r|\n", ""));
             dataVO.setToken(RandomUtils.getUUID());
 //            BASE64Decoder decoder = new BASE64Decoder();
 //            base64StrToImage(encoder.encode(oriCopyImages), "D:\\原图.png");
